CHANGES IN VERSION 1.9
-----------------------

USER VISIBLE CHANGES

    o Major refactoring of classes used by SNP/CNP algorithms.
    i) New class: CNSet, AlleleSet, SnpSuperSet
    ii) Removed classes: Snp*QSet, Snp*CallSet, Snp*CallSetPlus
    iii) Genotyping algorithms will use SnpSet instead of SnpCallSet

    o Replaced thetaA, thetaB, senseThetaA, antisenseThetaA,
        senseThetaB and antisenseThetaB methods by allele.

    o Exported DBPDInfo, ExpressionPDInfo, FeatureSet, TilingPDInfo